--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +22,8 @@
                     <img src="images/logo.png" alt="BusinAssist Logo" class="h-18 w-44">
                     <div class="flex items-center space-x-2">
                         <img src="images/email.png" alt="Email" class="h-10">
-                        <span>Email us: <br> <a href="mailto:info@businassist.com" class="text-black">info@businassist.com</a></span>
+                        <span>Email us: <br> <a href="mailto:info@businassist.com"
+                                class="text-black">info@businassist.com</a></span>
                     </div>
                     <div class="flex items-center space-x-2">
                         <img src="images/phone-call.svg" alt="Phone" class="h-10">
@@ -44,20 +46,22 @@
                 </ul>
             </nav>
         </div>
-    
-<header class="bg-blue-500 text-white p-6 sm:p-10 flex flex-col md:flex-row items-center justify-between h-auto md:h-[82vh]">
-    <div class="w-full text-center md:w-1/2 text-left mt-8 md:mt-0">
-        <p class="text-4xl sm:text-5xl md:text-5xl lg:text-6xl xl:text-8xl mt-4">UK Virtual</p>
-        <p class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-8xl mt-4">Mobile Number</p>
-        <p class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-8xl mt-4">At only £1.25</p>
-        <p class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-8xl mt-4">per week inc VAT</p>
+
+        <header
+            class="bg-blue-500 text-white p-6 sm:p-10 flex flex-col md:flex-row items-center justify-between h-auto md:h-[82vh]">
+            <div class="w-full text-center md:w-1/2 text-left mt-8 md:mt-0">
+                <p class="text-4xl sm:text-5xl md:text-5xl lg:text-6xl xl:text-8xl mt-4">UK Virtual</p>
+                <p class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-8xl mt-4">Mobile Number</p>
+                <p class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-8xl mt-4">At only £1.25</p>
+                <p class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-8xl mt-4">per week inc VAT</p>
+            </div>
+            <div class="w-full md:w-1/2 flex justify-center md:justify-end mt-8 md:mt-0">
+                <img src="images/person.png" alt="Person holding a phone"
+                    class="h-[60vh] sm:h-[70vh] md:h-[82vh] w-full object-contain">
+            </div>
+        </header>
     </div>
-    <div class="w-full md:w-1/2 flex justify-center md:justify-end mt-8 md:mt-0">
-        <img src="images/person.png" alt="Person holding a phone" class="h-[60vh] sm:h-[70vh] md:h-[82vh] w-full object-contain">
-    </div>
-</header>
-    </div>
-    
+
 
     <section class="max-full mx-auto px-6 py-12 text-center">
         <h2 class="text-6xl md:text-4xl font-bold text-gray-900 mb-16">
@@ -79,7 +83,7 @@
 
             <div
                 class="w-full md:w-1/2 flex justify-center mt-6 md:mt-0 bg-gray-100 p-5 shadow-lg border-2 border-gray-200 ">
-                <iframe class="w-full h-96 shadow-lg" src="https://www.youtube.com/embed/tgbNymZ7vqY?controls=1"
+                <iframe class="w-full h-96 shadow-lg" src="https://www.youtube.com/embed/ewvddSUEONQ?si=VXHRkkQLNvQEhqcB?controls=1"
                     frameborder="0" allowfullscreen>
                 </iframe>
             </div>
@@ -197,114 +201,124 @@
 
         </div>
         <div class="text-center p-6 mx-auto mt-6 max-w-6xl text-blue-900">
-            We work with Hutchison 3 which is one of the largest mobile networks in the UK and a network that is recognised
-            globally by all major telecom operators. This means guaranteed reachability and total peace of mind that you can
+            We work with Hutchison 3 which is one of the largest mobile networks in the UK and a network that is
+            recognised
+            globally by all major telecom operators. This means guaranteed reachability and total peace of mind that you
+            can
             be reached by
-            anvone around the world ov call or SMs 14/1. Not onlv is it tree tor vou to receive calls and SMS messages on
-            our numbers but anyone calling or texting you from the UK on your Virtual Mobile number can do so for free using
+            anvone around the world ov call or SMs 14/1. Not onlv is it tree tor vou to receive calls and SMS messages
+            on
+            our numbers but anyone calling or texting you from the UK on your Virtual Mobile number can do so for free
+            using
             their inclusive bundled minutes and texts.
         </div>
         <div class="text-center p-6 mx-auto mt-6 max-w-6xl text-blue-900">
-            We work with Hutchison 3 which is one of the largest mobile networks in the UK and a network that is recognised
-            globally by all major telecom operators. This means guaranteed reachability and total peace of mind that you can
+            We work with Hutchison 3 which is one of the largest mobile networks in the UK and a network that is
+            recognised
+            globally by all major telecom operators. This means guaranteed reachability and total peace of mind that you
+            can
             be reached by
-            anvone around the world ov call or SMs 14/1. Not onlv is it tree tor vou to receive calls and SMS messages on
-            our numbers but anyone calling or texting you from the UK on your Virtual Mobile number can do so for free using
+            anvone around the world ov call or SMs 14/1. Not onlv is it tree tor vou to receive calls and SMS messages
+            on
+            our numbers but anyone calling or texting you from the UK on your Virtual Mobile number can do so for free
+            using
             their inclusive bundled minutes and texts.
         </div>
     </section>
-<footer class="bg-blue-900 text-white py-10">
-    <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-5 gap-6 text-sm">
-        <div>
-            <h3 class="font-semibold text-lg mb-2">Head Office</h3>
-            <p>321-323 High Road, Chadwell Heath, Essex, RM6 6AX, United Kingdom</p>
-            <h3 class="font-semibold mt-4">Email Us</h3>
-            <p class="text-gray-300">info@businassist.com</p>
-            <h3 class="font-semibold mt-4">Call Us</h3>
-            <p class="text-gray-300">+44 (0) 30 30 40 123 9</p>
-            <h3 class="font-semibold mt-4">ICO Reg. No.</h3>
-            <p class="text-gray-300">ZA666014</p>
-            <h3 class="font-semibold mt-4">HMRC / AML Registration Number</h3>
-            <p class="text-gray-300">XLM00000186782</p>
-        </div>
-        <div>
-            <h3 class="font-semibold text-lg mb-2">Virtual Office Locations</h3>
-            <p><strong>London</strong></p>
-            <ul class="text-gray-300">
-                <li>East London - East Ham</li>
-                <li>Central London - Hatton Garden</li>
-                <li>Oxford Street, Mayfair</li>
-                <li>Tottenham Court Road</li>
-            </ul>
-            <p class="mt-3"><strong>Scotland</strong></p>
-            <ul class="text-gray-300">
-                <li>Edinburgh</li>
-                <li>Glasgow</li>
-            </ul>
-            <p class="mt-3"><strong>Northern Ireland</strong></p>
-            <ul class="text-gray-300">
-                <li>Belfast</li>
-            </ul>
-            <p class="mt-3"><strong>Wales</strong></p>
-            <ul class="text-gray-300">
-                <li>Cardiff</li>
-            </ul>
-        </div>
-        <div>
-            <h3 class="font-semibold text-lg mb-2">Back Office Solutions</h3>
-            <ul class="text-gray-300 space-y-1">
-                <li>Data Input</li>
-                <li>Document Processing</li>
-                <li>Data Extraction and Conversion</li>
-                <li>Call Answering</li>
-                <li>Customer Services via Email</li>
-                <li>Customer Services via Call Centre</li>
-                <li>Customer Services via Live Chat</li>
-                <li>Virtual Assistants</li>
-            </ul>
-        </div>
-        <div>
-            <h3 class="font-semibold text-lg mb-2">Popular Pages</h3>
-            <ul class="text-gray-300 space-y-1">
-                <li>Virtual Offices</li>
-                <li>Shared Offices</li>
-                <li>UK Charity Formation</li>
-                <li>ID-Docs</li>
-                <li>Blog</li>
-                <li>About Us</li>
-                <li>Contact Us</li>
-                <li>Terms & Conditions</li>
-                <li>Privacy Policy</li>
-            </ul>
+    <footer class="bg-blue-900 text-white py-10">
+        <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-5 gap-6 text-sm">
+            <div>
+                <h3 class="font-semibold text-lg mb-2">Head Office</h3>
+                <p>321-323 High Road, Chadwell Heath, Essex, RM6 6AX, United Kingdom</p>
+                <h3 class="font-semibold mt-4">Email Us</h3>
+                <p class="text-gray-300">info@businassist.com</p>
+                <h3 class="font-semibold mt-4">Call Us</h3>
+                <p class="text-gray-300">+44 (0) 30 30 40 123 9</p>
+                <h3 class="font-semibold mt-4">ICO Reg. No.</h3>
+                <p class="text-gray-300">ZA666014</p>
+                <h3 class="font-semibold mt-4">HMRC / AML Registration Number</h3>
+                <p class="text-gray-300">XLM00000186782</p>
+            </div>
+            <div>
+                <h3 class="font-semibold text-lg mb-2">Virtual Office Locations</h3>
+                <p><strong>London</strong></p>
+                <ul class="text-gray-300">
+                    <li>East London - East Ham</li>
+                    <li>Central London - Hatton Garden</li>
+                    <li>Oxford Street, Mayfair</li>
+                    <li>Tottenham Court Road</li>
+                </ul>
+                <p class="mt-3"><strong>Scotland</strong></p>
+                <ul class="text-gray-300">
+                    <li>Edinburgh</li>
+                    <li>Glasgow</li>
+                </ul>
+                <p class="mt-3"><strong>Northern Ireland</strong></p>
+                <ul class="text-gray-300">
+                    <li>Belfast</li>
+                </ul>
+                <p class="mt-3"><strong>Wales</strong></p>
+                <ul class="text-gray-300">
+                    <li>Cardiff</li>
+                </ul>
+            </div>
+            <div>
+                <h3 class="font-semibold text-lg mb-2">Back Office Solutions</h3>
+                <ul class="text-gray-300 space-y-1">
+                    <li>Data Input</li>
+                    <li>Document Processing</li>
+                    <li>Data Extraction and Conversion</li>
+                    <li>Call Answering</li>
+                    <li>Customer Services via Email</li>
+                    <li>Customer Services via Call Centre</li>
+                    <li>Customer Services via Live Chat</li>
+                    <li>Virtual Assistants</li>
+                </ul>
+            </div>
+            <div>
+                <h3 class="font-semibold text-lg mb-2">Popular Pages</h3>
+                <ul class="text-gray-300 space-y-1">
+                    <li>Virtual Offices</li>
+                    <li>Shared Offices</li>
+                    <li>UK Charity Formation</li>
+                    <li>ID-Docs</li>
+                    <li>Blog</li>
+                    <li>About Us</li>
+                    <li>Contact Us</li>
+                    <li>Terms & Conditions</li>
+                    <li>Privacy Policy</li>
+                </ul>
+            </div>
+
+            <div>
+                <h3 class="font-semibold text-lg mb-2">UK Bank Account Formation</h3>
+                <ul class="text-gray-300 space-y-1">
+                    <li>Cash Plus</li>
+                    <li>Tide</li>
+                    <li>Wise</li>
+                </ul>
+                <h3 class="font-semibold text-lg mt-4 mb-2">UK Ltd Company Formation</h3>
+                <ul class="text-gray-300 space-y-1">
+                    <li>4 or 5 Packages</li>
+                    <li>Charity Registration</li>
+                </ul>
+            </div>
         </div>
 
-        <div>
-            <h3 class="font-semibold text-lg mb-2">UK Bank Account Formation</h3>
-            <ul class="text-gray-300 space-y-1">
-                <li>Cash Plus</li>
-                <li>Tide</li>
-                <li>Wise</li>
-            </ul>
-            <h3 class="font-semibold text-lg mt-4 mb-2">UK Ltd Company Formation</h3>
-            <ul class="text-gray-300 space-y-1">
-                <li>4 or 5 Packages</li>
-                <li>Charity Registration</li>
-            </ul>
+        <div class="border-t-4 border-blue-700 mt-8 pt-4 text-center text-sm text-gray-300">
+            <p>&copy; 2023 <strong>BusinAssist</strong>. All Rights Reserved.</p>
+            <p>BusinAssist is a trading name of Icon Offices Ltd.</p>
+            <p>Registered Address: 321-323 High Road, RM6 6AX, UK</p>
+            <p>Registered in England & Wales. Registered Co. No. 10343713</p>
         </div>
-    </div>
-
-    <div class="border-t-4 border-blue-700 mt-8 pt-4 text-center text-sm text-gray-300">
-        <p>&copy; 2023 <strong>BusinAssist</strong>. All Rights Reserved.</p>
-        <p>BusinAssist is a trading name of Icon Offices Ltd.</p>
-        <p>Registered Address: 321-323 High Road, RM6 6AX, UK</p>
-        <p>Registered in England & Wales. Registered Co. No. 10343713</p>
-    </div>
-    <div class="fixed bottom-5 right-5">
-        <button class="bg-blue-700 hover:bg-blue-500 text-white flex items-center justify-between w-56 px-6 py-3 rounded-lg shadow-lg">
-            <span>Contact Us / Chat</span>
-            <img src="images/chat.svg" alt="chat" class="h-6 ml-2">
-        </button>
-    </div>
-</footer>
+        <div class="fixed bottom-5 right-5">
+            <button
+                class="bg-blue-700 hover:bg-blue-500 text-white flex items-center justify-between w-56 px-6 py-3 rounded-lg shadow-lg">
+                <span>Contact Us / Chat</span>
+                <img src="images/chat.svg" alt="chat" class="h-6 ml-2">
+            </button>
+        </div>
+    </footer>
 </body>
+
 </html>
